# cours-NN

./: .prettierignore  README.md  enhancements.md  eslint.config.js  linting.md  migration.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
.claude/: settings.json
.github/workflows/: svelte-to-github-pages.yml
backend_prep/: .gitignore  README.md  make_fashion_dataset.py  make_zero_one_dataset.py  pyproject.toml  requirements.txt  train_lenet.py  train_lenet_all_digits.py  tune_and_train_all_digits.py  tune_and_train_fashion.py  tune_and_train_zero_one.py
src/: app.css  app.html  stores.ts
src/lib/: ConfusionMatrix.svelte  DataSource.ts  DistributionChart.svelte  LinkFilters.ts  Network.ts  NetworkShape.ts  NetworkTesting.ts  data.ts  datasource.ts  models.ts
src/lib/components/: ConfusionMatrix.svelte  DataBatchGrid.svelte  DistributionChart.svelte  DrawBox.svelte  LabelledImage.svelte  LossChart.svelte  NetworkGraph.svelte  NetworkStats.svelte  NetworkTrainingStats.svelte
src/lib/generic/: image.ts
src/lib/networks/: AllDigitsNetwork.ts  FashionNetwork.ts  TemperatureControlNetwork.ts  ZeroOneNetwork.ts
src/routes/: +layout.svelte  +page.svelte  _Logo.svelte
src/routes/about/: +page.svelte
src/routes/all_digits/: +page.svelte
src/routes/debug/: +page.svelte
src/routes/evaluate/: +page.svelte
src/routes/fashion/: +page.svelte
src/routes/predict/: +page.svelte
src/routes/temperature_control/: +page.svelte
src/routes/train/: +page.svelte
static/: fashion.keras  fashion_labels_uint8  zero_one_labels_uint8
(+2 files in other folders)
