[project]
name = "backend-prep"
version = "0.1.0"
description = "Preparation of datasets and pretrained models"
readme = "README.md"
requires-python = "==3.13.*" # Because tensorflow isn't yet packaged for 3.14
dependencies = [
    "keras-tuner>=1.4.8",
    "pillow>=12.1.0",
    "tensorflow>=2.20.0",
    "tensorflowjs>=3.18.0",
]

[dependency-groups]
dev = ["ruff>=0.15.10"]
